- Asana #246251733565236 - Add player to team - Resolve css bug(z-index).

--- a/code/phase-1/public/user/css/esportcolosseum.css
+++ b/code/phase-1/public/user/css/esportcolosseum.css
@@ -84,6 +84,11 @@ ul.timing li.esc-challenge-time-active{
 	float: none;
 	text-align: left;
 }
+
+a.add-team-player{
+	position: relative;
+	z-index: 2;
+}
 /*----------------------- My Challenge Page ----------------------- End*/
 
 
